Attempts to wrap correctly. Not fruitful

--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
 }
 .gallery {
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     margin: 0;
     padding: 0;
-    flex-direction: column
 
 }
 
